--- a/app/globals.css
+++ b/app/globals.css
@@ -121,6 +121,7 @@ button {
   align-items: center;
   justify-content: center;
   transition: opacity 0.2s ease-in-out;
+  @apply shadow-md shadow-border;
 }
 
 /* Modal.css */
