--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
 /* =========================================
     THEME LIGHT
    ========================================= */
-/* @theme {
+@theme {
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
   --color-bg-dark: oklch(0.92 0.025 264);
@@ -27,12 +27,12 @@
   --color-info: oklch(0.5 0.05 260);
 
   --animate-fadeInUp: fadeInUp 0.5s ease-out;
-} */
+}
 
 /* =========================================
     THEME (Dark Default)
    ========================================= */
-@theme {
+/* @theme {
   --font-sans: var(--font-roboto);
   --color-bg-dark: oklch(0.1 0.025 264);
   --color-bg: oklch(0.15 0.025 264);
@@ -50,7 +50,7 @@
   --color-info: oklch(0.7 0.05 260);
 
   --animate-fadeInUp: fadeInUp 0.5s ease-out;
-}
+} */
 
 /* =========================================
     BASE sTYLES
@@ -83,7 +83,7 @@ textarea {
 }
 
 button {
-  color: var(--color-text);
+  color: oklch(1 0.05 264);
   font-size: 1rem;
   font-weight: 600;
   font-family: var(--font-roboto);
@@ -107,7 +107,7 @@ button {
 }
 
 .user-message-text {
-  color: var(--color-text);
+  color: oklch(1 0.05 264);
   font-size: 1rem;
   font-weight: 500;
   font-family: var(--font-roboto);
